[package]
name = "sync-cell-slice"
version = "0.9.9"
edition = "2021"
description = "Cells and slices that are accessible from multiple threads"
repository = "https://github.com/vigna/sync-cell-slice-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
keywords = ["cell", "slice", "sync"]
categories = ["concurrency"]
authors = ["Matteo Dell'Acqua <dellacqua.matteo99@gmail.com>", "Sebastiano Vigna <sebastiano.vigna@unimi.it>"]
