[package]
name = "sync-cell-slice"
version = "0.9.14"
edition = "2024"
description = "Cells and slices that are accessible from multiple threads"
repository = "https://github.com/vigna/sync-cell-slice-rs"
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["cell", "slice", "sync"]
categories = ["concurrency", "rust-patterns"]
authors = ["Matteo Dell'Acqua <dellacqua.matteo99@gmail.com>", "Sebastiano Vigna <sebastiano.vigna@unimi.it>"]
rust-version = "1.85"

[dev-dependencies]
static_assertions = "1.1"
